Fix footer gallery alignment and hr thickness

--- a/style.css
+++ b/style.css
@@ -398,43 +398,35 @@ li a {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-template-rows: auto auto;
-  gap: 10.67px;
+
+  grid-template-columns: 351.33px 351.33px 352px;
+  grid-template-rows: 197.62px 277px;
+  column-gap: 10.67px;
+  row-gap: 13.34px;
+
   justify-content: center;
 }
 
-.gallery img {
-  display: block;
-  object-fit: cover;
+.cell {
+  display: flex;
+  align-items: flex-start; 
 }
 
-.gallery img:nth-child(1) {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  width: 351.33px;
-  height: 197.62;
-}
-
-.gallery img:nth-child(2) {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  width: 351.33px;
-  height: 197.62;
-}
-
-.gallery img:nth-child(3) {
+.cell.tall {
   grid-column: 3 / 4;
   grid-row: 1 / 3;
-  width: 352px;
-  height: 494px;
 }
 
-.gallery img:nth-child(4) {
+.cell.wide {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  width: 713px;
-  height: 277px;
+}
+
+.cell img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .social-title {
@@ -461,11 +453,15 @@ li a {
   height: 50px;
 }
 
-hr{
-  border: 1px solid var(--card-text-color);
-  display: flex;
-  align-items: center;
+hr {
+  border: none;            
+  height: 1px;            
+  background-color:var(--card-text-color);
+  margin: 0 auto;      
 }
+
+
+
 
 .copyright {
   font-size: 20px;
